@@ -3,7 +3,8 @@
 
 BZFlag 2.0.5
 ------------
-* 
+* Fix misc/bzfquery.pl to handle MsgGameTime - Tegan, Mark Thomas
+
 
 BZFlag 2.0.4  "Shiny" (2005-09-30)
 ----------------------------------
